[metadata]
name = daidepp
version = 1.0.5
author = Byung Oh
author_email = byung.oh@cynnovative.com
description = "DAIDE Parser"
long_description = file: README.md
long_description_content_type = text/markdown

[options]
package_dir =
    =src
packages = find:
python_requires = >=3.7
install_requires =
    parsimonious==0.9.0
	importlib-metadata>=6.0.0 ; python_version < "3.8"

[options.packages.find]
where = src

[options.extras_require]
dev =
    black>=22.8.0
    docformatter==1.4
    isort>=5.10.1
    pydocstyle==6.1.1
    pylint==2.12.2
    pytest==7.0.0
    pytest-cov==3.0.0
    pytest-dependency==0.5.1
    pytest-mypy==0.9.1
    pytest-timeout==2.1.0

[isort]
multi_line_output = 3
include_trailing_comma = True
force_grid_wrap = 0
use_parentheses = True
line_length = 88
known_first_party = daidepp

[mypy]
ignore_missing_imports = True
disallow_untyped_calls = False
disallow_untyped_defs = True
disallow_incomplete_defs = True
files = src/
exclude = tests/
follow_imports = silent

[tool:pytest]
testpaths = tests
addopts = 
    --cov=daidepp
    --cov-report html
timeout = 10
filterwarnings =
    ignore::DeprecationWarning

[pylint.MESSAGES CONTROL]
extension-pkg-whitelist =
    pydantic

[pydocstyle]
convention = numpy
add_ignore = D2,D105,D101,D100,D104,D106
